# instant_messaging_project

./: .gitignore  HYBRID_MODE.md  README.md  README_SCRIPTS.md  SCRIPTS_GUIDE.md  check_status.sh  start_all.sh  stop_all.sh
monitoring/: ARCHITECTURE.md  DELIVERY.md  IMPLEMENTATION_GUIDE.md  METRICS_INSTRUMENTATION.md  QUICK_STOP.md  README.md  alert_rules.yml  alertmanager.yml  docker-compose.yml  loki-config.yml  prometheus.yml  promtail-config.yml  start.sh  stop.sh  test.sh
monitoring/grafana/dashboards/: chatroom-overview.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/grafana/provisioning/datasources/: datasources.yml
scripts/: KAFKA_GUIDE.md  kafka.sh  setup_kafka.sh
server/: CMakeLists.txt  test_chatroom.sh
server/application/: CMakeLists.txt
server/application/chat-room/: CMakeLists.txt  conf.conf  main.cc
server/application/chat-room/api/: api_common.cc  api_common.h  api_login.cc  api_login.h  api_msg.cc  api_msg.h  api_register.cc  api_register.h  api_types.h
server/application/chat-room/base/: base64.cpp  base64.h  http_client.cc  http_client.h
server/application/chat-room/monitoring/: metrics_collector.cc  metrics_collector.h
server/application/chat-room/mysql/: db_pool.cc  db_pool.h
server/application/chat-room/redis/: cache_pool.cc  cache_pool.h
server/application/chat-room/rpc/: ChatRoom.Comet.proto  comet_service.cc  comet_service.h
server/application/chat-room/service/: http_conn.cc  http_conn.h  http_handler.h  http_parser_wrapper.cc  http_parser_wrapper.h  pub_sub_service.cc  pub_sub_service.h  websocket_conn.cc  websocket_conn.h
server/application/client/: CMakeLists.txt  README.sh  chat_client.cc
server/application/job/: CMakeLists.txt  ChatRoom.Protocol.proto  DISTRIBUTED_LOCK_TTL.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  REDIS_ROUTING.md  check_redis_routing.sh  create.sh  demo_distributed_lock.sh  kafka_consumer.cc  kafka_consumer.h  main.cc  route_service.cc  route_service.h  setup_redis_test_data.sh  start_job.sh
server/application/logic/: CMakeLists.txt  ChatRoom.Job.proto  README.md  http_parser.h  kafka_producer.cpp  kafka_producer.h  main.cc
server/proto/: CMakeLists.txt  ChatRoom.Comet.proto  ChatRoom.Job.proto  ChatRoom.Protocol.proto  README.md
