# chat-room 项目特定的包含目录
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/base)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/api)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/mysql)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/redis)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/service)

# 系统库包含目录
INCLUDE_DIRECTORIES(/usr/include/mysql)
INCLUDE_DIRECTORIES(/usr/include/jsoncpp)

# 收集源文件
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/base BASE_LIST)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/api API_LIST)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/mysql MYSQL_LIST)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/redis REDIS_LIST)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/service SERVICE_LIST)

# 手动添加md5.cc（如果AUX_SOURCE_DIRECTORY没有找到）
set(BASE_LIST ${BASE_LIST} ${CMAKE_CURRENT_SOURCE_DIR}/base/md5.cc)

# 创建可执行文件
ADD_EXECUTABLE(chat-room main.cc ${SERVICE_LIST} ${BASE_LIST} ${API_LIST} ${MYSQL_LIST} ${REDIS_LIST})

# 添加库搜索路径
LINK_DIRECTORIES(/usr/local/lib)
LINK_DIRECTORIES(/usr/lib/x86_64-linux-gnu)

# 链接库（注意顺序很重要，被依赖的库要放在后面）
TARGET_LINK_LIBRARIES(chat-room 
    muduo_net 
    muduo_base 
    jsoncpp 
    mysqlclient 
    uuid 
    ssl 
    crypto 
    pthread
)