INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
# INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/base)
# INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/api)
# INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/mysql)
# INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/redis)
# INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/service)

INCLUDE_DIRECTORIES(/usr/local/include)

INCLUDE_DIRECTORIES(/usr/include/mysql)
INCLUDE_DIRECTORIES(/usr/include/jsoncpp)

# 添加Protobuf支持
set(protobuf_MODULE_COMPATIBLE TRUE)
find_package(Protobuf REQUIRED)
message(STATUS "Using protobuf ${Protobuf_VERSION}")
set(_PROTOBUF_LIBPROTOBUF protobuf::libprotobuf)

AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} MAIN_LIST)
# AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/base BASE_LIST)
# AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/api API_LIST)
# AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/mysql MYSQL_LIST)
# AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/redis REDIS_LIST)
# AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/service SERVICE_LIST)

ADD_EXECUTABLE(logic  ${MAIN_LIST} ${SERVICE_LIST} ${BASE_LIST} ${API_LIST} ${MYSQL_LIST} ${REDIS_LIST} )

TARGET_LINK_LIBRARIES(logic 
    muduo_net 
    muduo_base 
    jsoncpp 
    mysqlclient 
    uuid 
    ssl 
    crypto 
    rdkafka  
    rdkafka++ 
    ${_PROTOBUF_LIBPROTOBUF}
)